--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -4,6 +4,26 @@
   become: true
   tasks:
 
-  - name: install mysql-server package
+  - name: Update repository index
+    apt:
+      update_cache: yes
+
+  - name: Install nginx
+    apt:
+      name: nginx
+      state: latest
+  - name: Start nginx service
+    systemd:
+      name: nginx
+      state: started
+
+  - name: Install mysql-server package
     apt:
       name: mysql-server
+      state: latest
+  - name: Start MySQL service
+    systemd:
+      name: mysqld
+      state: started
+      enabled: yes
+
